[EFL][WK2] Fix WebKit2-EFL build https://bugs.webkit.org/show_bug.cgi?id=83693

Reviewed by Carlos Garcia Campos.

.:

* Source/cmake/OptionsEfl.cmake: Define BUILDING_SOUP__ to build WebKit2/Efl.

Source/WebCore:

* CMakeLists.txt: Add GestureTapHighlighter.cpp.

Source/WebKit2:

* CMakeLists.txt: Move IDL generator codes to generate port specific *.messages.in.
* PlatformEfl.cmake: Add soup related files after r115411 and includes to fix build break.
* UIProcess/API/efl/PageClientImpl.cpp: Fix build break with ENABLE_TOUCH_EVENTS.
(WebKit):
(WebKit::PageClientImpl::doneWithTouchEvent):
* UIProcess/API/efl/PageClientImpl.h:
(PageClientImpl):
* WebProcess/WebCoreSupport/WebChromeClient.cpp: Fix build break with ENABLE_INPUT_TYPE_COLOR and ENABLE_REGISTER_PROTOCOL_HANDLER.
(WebKit):
(WebKit::WebChromeClient::createColorChooser):
* WebProcess/WebCoreSupport/WebChromeClient.h:
(WebChromeClient):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp: Fix build break with ENABLE_WEB_INTENTS
(WebKit):
(WebKit::WebFrameLoaderClient::dispatchIntent):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.h:
(WebCore):
(WebFrameLoaderClient):
* WebProcess/WebProcess.cpp: Guard PLATFORM_STRATEGIES codes.
(WebKit::WebProcess::didGetPlugins):
* WebProcess/soup/WebSoupRequestManager.cpp: Try to share with EFL port.
(WebKit::WebSoupRequestManager::didHandleURIRequest):

Tools:

* CMakeLists.txt:  Guard Webkit1 related codes with ENABLE_WEBKIT.


Canonical link: https://commits.webkit.org/105638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118914 268f45cc-cd09-0410-ab3c-d52691b4dbfc