Source/WebKit2/UIProcess/API/efl/PageClientImpl.h
@@ -77,6 +77,9 @@ private:
     virtual WebCore::IntRect windowToScreen(const WebCore::IntRect&);
 
     virtual void doneWithKeyEvent(const NativeWebKeyboardEvent&, bool);
+#if ENABLE(TOUCH_EVENTS)
+    virtual void doneWithTouchEvent(const NativeWebTouchEvent&, bool wasEventHandled);
+#endif
 
     virtual PassRefPtr<WebPopupMenuProxy> createPopupMenuProxy(WebPageProxy*);
     virtual PassRefPtr<WebContextMenuProxy> createContextMenuProxy(WebPageProxy*);
