Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.h
@@ -28,6 +28,12 @@
 
 #include <WebCore/FrameLoaderClient.h>
 
+namespace WebCore {
+#if ENABLE(WEB_INTENTS)
+class IntentRequest;
+#endif
+}
+
 namespace WebKit {
 
 class PluginView;
@@ -215,7 +221,11 @@ private:
     // FIXME: Windows should use willCacheResponse - <https://bugs.webkit.org/show_bug.cgi?id=57257>.
     virtual bool shouldCacheResponse(WebCore::DocumentLoader*, unsigned long identifier, const WebCore::ResourceResponse&, const unsigned char* data, unsigned long long length) OVERRIDE;
 #endif
-    
+
+#if ENABLE(WEB_INTENTS)
+    virtual void dispatchIntent(PassRefPtr<WebCore::IntentRequest>) OVERRIDE;
+#endif
+
     virtual bool shouldUsePluginDocument(const String& /*mimeType*/) const OVERRIDE;
 
     virtual void didChangeScrollOffset() OVERRIDE;
